Lecture1 IO examples fixed

--- a/Lecture1/Introduction to Computer Programming.ipynb
+++ b/Lecture1/Introduction to Computer Programming.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-24T05:12:55.050891Z",
-     "start_time": "2020-08-24T05:12:54.980701Z"
+     "end_time": "2020-08-24T16:31:32.359489Z",
+     "start_time": "2020-08-24T16:31:32.296257Z"
     },
     "hide_input": true,
     "init_cell": true
@@ -288,26 +288,23 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
-    "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "e5190d14d87c1088c86f58d7d7862a1a",
-     "grade": false,
+     "checksum": "4618d2caaff4f4676c8e0fb31bd852fb",
+     "grade": true,
      "grade_id": "cell-e1982fbce01506b3",
-     "locked": true,
+     "locked": false,
      "points": 0,
      "schema_version": 3,
-     "solution": false,
-     "task": true
+     "solution": true,
+     "task": false
     },
     "slideshow": {
      "slide_type": "-"
     }
    },
    "source": [
-    "- hard disk\n",
-    "- CD/DVD Rom (writable)\n",
-    "- touch screen"
+    "YOUR ANSWER HERE"
    ]
   },
   {
