--- a/Lab1/Setup.ipynb
+++ b/Lab1/Setup.ipynb
@@ -53,7 +53,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "b2a60d5b76b24051d6689fef528669d4",
+     "checksum": "30f69ea2318c8f1a19b637f4f40202d5",
      "grade": false,
      "grade_id": "Login",
      "locked": true,
@@ -66,7 +66,7 @@
     }
    },
    "source": [
-    "1. Enter the url [ltjh.cs.cityu.edu.hk](ltjh.cs.cityu.edu.hk) in a web browser.\n",
+    "1. Enter the url [ltjh.cs.cityu.edu.hk](https://ltjh.cs.cityu.edu.hk) in a web browser.\n",
     "1. Enter your [EID](https://www.cityu.edu.hk/esu/eid.htm) and Password in the fields `Username` and `Password` respectively.\n",
     "1. Click the `Sign In` button."
    ]
@@ -83,7 +83,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -429,7 +428,7 @@
     "1. To assess your solution thoroughly, we often run new tests hidden from you after you have submitted your notebook. There is no partial credit for a partially correct solution that works for the visible test but fails for the hidden test. Therefore, *you should ensure your solution works in general rather than just the visible tests*.\n",
     "1. You can click the `Validate` button to run all the visible tests.\n",
     "1. If you open the same notebook multiple times in different browser windows, be careful in making changes in different windows. Inconsistent changes may lead to conflicts or loss of your data.\n",
-    "1. If your notebook fails to run any code, the Kernel might have died. You can restart the kernel with `Kernel->Restart`. If restaring fails, check your code cells to see if there are unsafe code that breaks the kernel."
+    "1. If your notebook fails to run any code, the Kernel might have died. You can restart the kernel with `Kernel->Restart`. If restarting fails, check your code cells to see if there are unsafe code that breaks the kernel."
    ]
   },
   {
