--- a/Lecture1/Introduction to Computer Programming.ipynb
+++ b/Lecture1/Introduction to Computer Programming.ipynb
@@ -18,8 +18,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-24T16:31:32.359489Z",
-     "start_time": "2020-08-24T16:31:32.296257Z"
+     "end_time": "2020-08-28T16:44:13.027013Z",
+     "start_time": "2020-08-28T16:44:12.974823Z"
     },
     "hide_input": true,
     "init_cell": true
@@ -104,7 +104,7 @@
    "source": [
     "<center><figure>\n",
     "<a title=\"Encyclopædia Britannica / Public domain\" href=\"https://commons.wikimedia.org/wiki/File:Abacus_6.png\"><img width=\"400\" alt=\"Abacus 6\" src=\"https://upload.wikimedia.org/wikipedia/commons/a/af/Abacus_6.png\"></a>\n",
-    "  <figcaption>A calculator on a computer.</figcaption>\n",
+    "  <figcaption>Abacus - an ancient mechanical computing device.</figcaption>\n",
     "</figure>\n",
     "</center>"
    ]
@@ -180,7 +180,7 @@
    "source": [
     "<center><figure>\n",
     "<a title=\"Unsplash\" href=\"https://unsplash.com/photos/gyRa86ExKTw\"><img width=\"600\" alt=\"Computer peripherals\" src=\"https://images.unsplash.com/flagged/photo-1551954810-43cd6aef5b1f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3580&q=80\"></a>\n",
-    "  <figcaption>A calculator on a computer.</figcaption>\n",
+    "  <figcaption>Computer Peripherals.</figcaption>\n",
     "</figure>\n",
     "</center>"
    ]
