--- a/Lab1/Setup.ipynb
+++ b/Lab1/Setup.ipynb
@@ -449,7 +449,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "markdown",
-     "checksum": "4995c131567e31df40ccd4fba7d47c85",
+     "checksum": "c2e6b8aa31ed3bb01a8dabcd91adb2d4",
      "grade": false,
      "grade_id": "Check",
      "locked": true,
@@ -462,7 +462,7 @@
     }
    },
    "source": [
-    "- Although this Lab is graded, you are required to submit it, to get familiar with the procedure.\n",
+    "- Although this Lab is not graded, you are required to submit it, to get familiar with the procedure.\n",
     "- Before you submit, however, make sure everything runs as expected:\n",
     "    1. **Restart the kernel**: `Kernel->Restart` \n",
     "    1. **run all cells**: `Cell->Run All`"
