--- a/Lab1/Card.ipynb
+++ b/Lab1/Card.ipynb
@@ -200,7 +200,7 @@
     "editable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "661d0c1c3dd57cecb05ec7a80408f008",
+     "checksum": "48d31605926c6b2629b8bb93d885945e",
      "grade": false,
      "grade_id": "cell-a2e619c7a0f8b895",
      "locked": true,
@@ -216,7 +216,7 @@
    "source": [
     "# Randomly draw a card from the deck with replacement\n",
     "import random\n",
-    "print(random.choice(cards))"
+    "print(random.choice(deck))"
    ]
   },
   {
