--- a/Lecture1/Introduction to Computer Programming.ipynb
+++ b/Lecture1/Introduction to Computer Programming.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-29T09:58:55.835693Z",
-     "start_time": "2020-08-29T09:58:55.788418Z"
+     "end_time": "2020-08-31T14:49:03.921316Z",
+     "start_time": "2020-08-31T14:49:03.855597Z"
     },
     "hide_input": true,
     "init_cell": true
@@ -480,7 +480,7 @@
    },
    "source": [
     "- The CPU is capable of carrying out \n",
-    "    - a set of instructions such as *addition, *negation*, *Copy*, etc., on \n",
+    "    - a set of instructions such as *addition*, *negation*, *Copy*, etc.\n",
     "    - some numbers stored in the RAM.\n",
     "- Both the instructions and the numbers are represented as binary sequences.\n",
     "- E.g., in Intel-based CPU, the command for addition is like **00000011 00000100**"
@@ -575,7 +575,7 @@
    },
    "source": [
     "As mentioned in the video, there are *International Standards* for representing characters:\n",
-    "- [ASCII](https://en.wikipedia.org/wiki/ASCII) (American Standard Code for Information Interchange) Maps English letters and some other symbols to 8-bits (8 binary digits, also called a byte). E.g., `A` is `01000001`.\n",
+    "- [ASCII](https://en.wikipedia.org/wiki/ASCII) (American Standard Code for Information Interchange) maps English letters and some other symbols to 8-bits (8 binary digits, also called a byte). E.g., `A` is `01000001`.\n",
     "- [Unicode](https://en.wikipedia.org/wiki/Unicode) can also represent characters in different languages such as Chinese, Japanese...etc. "
    ]
   },
@@ -588,7 +588,7 @@
    },
    "source": [
     "There are additional standards to represent numbers other than non-negative integers:\n",
-    "- [2's complement format](https://en.wikipedia.org/wiki/Two%27s_complement) for negative integers (e.g. 123)\n",
+    "- [2's complement format](https://en.wikipedia.org/wiki/Two%27s_complement) for negative integers (e.g. -123)\n",
     "- [IEEE floating point format](https://en.wikipedia.org/wiki/IEEE_754) for floating point numbers such as $1.23 x 10^{-4}$."
    ]
   },
@@ -657,7 +657,7 @@
     }
    },
    "source": [
-    "No. Programmers do no write machine codes directly because it is too hard to think in binary representations. "
+    "No. Programmers do not write machine codes directly because it is too hard to think in binary representations. "
    ]
   },
   {
@@ -833,7 +833,7 @@
    },
    "source": [
     "- A code written in high-level language gets converted automatically to a low-level machine code for the desired platform. \n",
-    "- Hence, it *abstract* aways details that can be handled by the computer (low-level code) itself."
+    "- Hence, it *abstracts* away details that can be handled by the computer (low-level code) itself."
    ]
   },
   {
@@ -857,9 +857,9 @@
    "source": [
     "Different high-level languages can have different implementations of the conversion processes:\n",
     "- **Compilation** means converting a program well before executing of the program. E.g., C++ and Java programs are compiled.\n",
-    "- **Interpretation:** means converting a program on-the-fly during the execution of a program. E.g., JavaScript and Python programs are often interpreted.\n",
+    "- **Interpretation** means converting a program on-the-fly during the execution of a program. E.g., JavaScript and Python programs are often interpreted.\n",
     "\n",
-    "Roughly speaking, compiled programs run faster but interpreted program is more flexible and can be modified at run time.  \n",
+    "Roughly speaking, compiled programs run faster but interpreted programs are more flexible and can be modified at run time.  \n",
     "(The [truth](https://finematics.com/compiled-vs-interpreted-programming-languages/) is indeed more complicated than required for this course.)"
    ]
   },
@@ -960,12 +960,12 @@
    "outputs": [],
    "source": [
     "%%mytutor -h 400\n",
-    "# The program here reads the cohort and reports which year the user is in \n",
+    "# The program here reads the cohort and reports which year the user is in\n",
     "# Assumption: Input is integer no greater than 2020\n",
     "import datetime  # load a library to tell the current year\n",
     "cohort = input(\"In which year did you join CityU? \")\n",
-    "year   = datetime.datetime.now().year - int(cohort) + 1\n",
-    "print(\"So you are a year\",year,\"student.\")"
+    "year = datetime.datetime.now().year - int(cohort) + 1\n",
+    "print(\"So you are a year\", year, \"student.\")"
    ]
   },
   {
@@ -977,7 +977,7 @@
    },
    "source": [
     "A Python program contains *statements* just like sentences in natural languages.  \n",
-    "E.g., `cohort = input(\"In which year did you join CityU? \")` is a statement give some value a name called `cohort`."
+    "E.g., `cohort = input(\"In which year did you join CityU? \")` is a statement that gives some value a name called `cohort`."
    ]
   },
   {
@@ -988,7 +988,7 @@
     }
    },
    "source": [
-    "For the purpose of computations, a statement often contain *expressions* that evaluate to certain values.  \n",
+    "For the purpose of computations, a statement often contains *expressions* that evaluate to certain values.  \n",
     "E.g., `input(\"In which year did you join CityU? \")` is an expression with the value equal to what you input to the prompt.  \n",
     "That value is then given the name `cohort`."
    ]
