--- a/Lab1/Setup.ipynb
+++ b/Lab1/Setup.ipynb
@@ -163,9 +163,9 @@
     "1. Note that all the downloaded course materials will be placed under the `cs1302` folder of your home directory by default, so you need not go to the `Assignments` tab again to open the downloaded materials. \n",
     "E.g., you can access the `Setup.ipynb` notebook as follows:\n",
     "    1. Going to the `File` tab, which is the default JupyterHub homepage after login or when you click the logo on the top left-hand corner.\n",
-    "    1. Enter the notebook URL http://ltjh1.cs.cityu.edu.hk/user-redirect/tree/cs1302/Lab1/Setup.ipynb. (See the [documentation](https://jupyterhub.readthedocs.io/en/stable/reference/urls.html) for details.)\n",
+    "    1. Enter the notebook URL https://ltjh.cs.cityu.edu.hk/user-redirect/tree/cs1302/Lab1/Setup.ipynb. (See the [documentation](https://jupyterhub.readthedocs.io/en/stable/reference/urls.html) for details.)\n",
     "1. If for any reason you want to Fetch `Lab1` again, you have to first rename your `Lab1` folder to a different name such as `Lab1_orig`. You can do so by selecting the folder and click rename. You can also remove the folder by evaluating `!rm -rf ~/cs1302/Lab1` in a code cell. (Be very cautious as removed folders cannot be recovered.)\n",
-    "1. You may also play with the new interface called JupyterLab http://ltjh1.cs.cityu.edu.hk/user-redirect/lab/.\n",
+    "1. You may also play with the new interface called JupyterLab https://ltjh.cs.cityu.edu.hk/user-redirect/lab/.\n",
     "However, the new interface does not support all the tools we need for lectures/labs. It is currently under [active development on GitHub](https://github.com/jupyterlab/jupyterlab), so be prepared to see [bugs](https://en.wikipedia.org/wiki/Software_bug)."
    ]
   },
