--- a/Lecture3/Conditional Execution.ipynb
+++ b/Lecture3/Conditional Execution.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-11T23:42:51.654654Z",
-     "start_time": "2020-09-11T23:42:51.501700Z"
+     "end_time": "2020-09-15T03:39:52.733329Z",
+     "start_time": "2020-09-15T03:39:52.669805Z"
     },
     "hide_input": true,
     "init_cell": true
@@ -72,17 +72,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-11T23:43:38.987436Z",
-     "start_time": "2020-09-11T23:43:38.911557Z"
+     "end_time": "2020-09-14T02:57:48.792115Z",
+     "start_time": "2020-09-14T02:57:48.725388Z"
     },
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:1, b:2, a*b:2, a/b:0.5\n"
+     ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-c6f0ad2b2b09>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmultiply_or_divide\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mmultiply_or_divide\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# multiplication is valid but not shown\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-4-c6f0ad2b2b09>\u001b[0m in \u001b[0;36mmultiply_or_divide\u001b[0;34m(a, b)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmultiply_or_divide\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'a:{}, b:{}, a*b:{}, a/b:{}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmultiply_or_divide\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
    "source": [
     "def multiply_or_divide(a, b):\n",
     "    print('a:{}, b:{}, a*b:{}, a/b:{}'.format(a, b, a * b, a / b))\n",
@@ -105,17 +125,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-11T23:45:09.013086Z",
-     "start_time": "2020-09-11T23:45:09.006583Z"
+     "end_time": "2020-09-14T03:01:50.772745Z",
+     "start_time": "2020-09-14T03:01:50.763098Z"
     },
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a:1, b:2, a*b:2, a/b:0.5\n",
+      "a:1, b:0, a*b:0, a/b:undefined\n"
+     ]
+    }
+   ],
    "source": [
     "def multiply_or_divide(a, b):\n",
     "    fix = a / b if b else 'undefined'\n",
@@ -215,20 +244,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-11T23:49:58.452860Z",
-     "start_time": "2020-09-11T23:49:58.406808Z"
+     "end_time": "2020-09-14T03:08:11.446720Z",
+     "start_time": "2020-09-14T03:08:11.390771Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5afbb0c3e60549ac82712adf1b7a1270",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='10', description='operand1'), Dropdown(description='operator', options=('=='…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Comparisons\n",
     "from ipywidgets import interact\n",
@@ -279,17 +321,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-11T23:52:19.106039Z",
-     "start_time": "2020-09-11T23:52:19.092278Z"
+     "end_time": "2020-09-14T03:09:15.609792Z",
+     "start_time": "2020-09-14T03:09:15.596043Z"
     },
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "1 + 2 >= 3  # (1 + 2) >= 3"
    ]
@@ -307,17 +360,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-11T23:53:03.157304Z",
-     "start_time": "2020-09-11T23:53:03.150532Z"
+     "end_time": "2020-09-15T02:56:16.076170Z",
+     "start_time": "2020-09-15T02:56:16.069889Z"
     },
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "2.0 == 2 > 1"
    ]
@@ -346,17 +410,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-11T23:53:21.557499Z",
-     "start_time": "2020-09-11T23:53:21.548954Z"
+     "end_time": "2020-09-14T03:09:32.498124Z",
+     "start_time": "2020-09-14T03:09:32.491327Z"
     },
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(False, False)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(2.0 == 2) > 1, 2.0 == (2 > 1)  # not the same as 2.0 == 2 > 1"
    ]
@@ -391,17 +466,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-11T23:56:55.242691Z",
-     "start_time": "2020-09-11T23:56:55.234247Z"
+     "end_time": "2020-09-14T03:10:36.064464Z",
+     "start_time": "2020-09-14T03:10:36.056113Z"
     },
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, False)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "1 <= 2 < 3 != 4, (1 <= 2) < (3 != 4)"
    ]
@@ -430,7 +516,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Since the relation operators are non-associative, the second expression should be false."
    ]
   },
   {
@@ -447,18 +533,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-11T23:58:13.970230Z",
-     "start_time": "2020-09-11T23:58:13.939398Z"
+     "end_time": "2020-09-14T03:12:36.503048Z",
+     "start_time": "2020-09-14T03:12:36.465864Z"
     },
     "code_folding": [],
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f7d228c3a9f44e5d8a03e1536a8fe4e0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='expression', options=('10 == 10.', '\"A\" == \"A\"', '\"A\" == \"A \"', '\"…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Comparisons beyond numbers\n",
     "@interact(expression=[\n",
@@ -523,34 +624,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-08T15:02:31.529274Z",
-     "start_time": "2020-09-08T15:02:31.405018Z"
+     "end_time": "2020-09-14T03:17:30.612930Z",
+     "start_time": "2020-09-14T03:17:30.484912Z"
     },
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/bin/bash: 1: command not found\r\n"
+     ]
+    }
+   ],
    "source": [
     "!(1 == 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-08T15:03:43.371177Z",
-     "start_time": "2020-09-08T15:03:43.251153Z"
+     "end_time": "2020-09-14T03:17:49.556685Z",
+     "start_time": "2020-09-14T03:17:49.428447Z"
     },
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conditional Execution.ipynb  Iteration.ipynb\r\n"
+     ]
+    }
+   ],
    "source": [
     "!ls  # a bash command that lists files in the current directory"
    ]
@@ -568,17 +685,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-12T00:37:27.688549Z",
-     "start_time": "2020-09-12T00:37:27.681227Z"
+     "end_time": "2020-09-14T03:17:59.052603Z",
+     "start_time": "2020-09-14T03:17:59.045193Z"
     },
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = 10\n",
     "y = (x**(1/3))**3\n",
@@ -621,17 +749,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-12T00:38:17.357180Z",
-     "start_time": "2020-09-12T00:38:17.349848Z"
+     "end_time": "2020-09-14T03:18:37.385545Z",
+     "start_time": "2020-09-14T03:18:37.379463Z"
     },
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "abs(x - y) <= 1e-9"
    ]
@@ -673,17 +812,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-12T00:41:15.078354Z",
-     "start_time": "2020-09-12T00:41:15.071548Z"
+     "end_time": "2020-09-14T03:19:37.646646Z",
+     "start_time": "2020-09-14T03:19:37.637426Z"
     },
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = 1e10\n",
     "y = (x**(1/3))**3\n",
@@ -704,17 +854,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-12T00:42:37.976759Z",
-     "start_time": "2020-09-12T00:42:37.969252Z"
+     "end_time": "2020-09-14T03:19:53.801446Z",
+     "start_time": "2020-09-14T03:19:53.795428Z"
     },
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import math\n",
     "math.isclose(x, y)"
