--- a/Lab1/Card.ipynb
+++ b/Lab1/Card.ipynb
@@ -16,6 +16,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -27,6 +28,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -120,6 +122,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -132,6 +135,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -148,6 +152,7 @@
      "end_time": "2020-08-24T06:32:14.899767Z",
      "start_time": "2020-08-24T06:32:14.891659Z"
     },
+    "hidden": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -168,6 +173,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -184,6 +190,7 @@
      "end_time": "2020-08-24T06:32:21.728471Z",
      "start_time": "2020-08-24T06:32:21.722384Z"
     },
+    "hidden": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -198,6 +205,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -209,6 +217,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -223,6 +232,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -236,6 +246,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -248,6 +259,7 @@
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
+    "hidden": true,
     "nbgrader": {
      "cell_type": "markdown",
      "checksum": "4c6cc73b95ea527fcaba1557556ef42d",
@@ -270,6 +282,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -281,6 +294,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -292,6 +306,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "hidden": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -535,6 +550,24 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.7"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   },
   "toc": {
    "base_numbering": 1,
