--- a/Lab2/Calculators.ipynb
+++ b/Lab2/Calculators.ipynb
@@ -27,11 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-09T02:31:27.325065Z",
-     "start_time": "2020-09-09T02:31:27.252330Z"
+     "end_time": "2020-09-19T06:08:29.671724Z",
+     "start_time": "2020-09-19T06:08:29.254016Z"
     },
     "hide_input": false,
     "init_cell": true,
@@ -223,7 +223,7 @@
    "source": [
     "def length_of_hypotenuse(a, b):\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    c = 1\n",
     "    return c"
    ]
   },
@@ -435,7 +435,7 @@
    "source": [
     "def get_y(x, a, b, c):\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    y=1\n",
     "    return y"
    ]
   },
@@ -768,8 +768,7 @@
    "outputs": [],
    "source": [
     "def byte_to_decimal(b7, b6, b5, b4, b3, b2, b1, b0):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    decimal = 1\n",
     "    return decimal"
    ]
   },
@@ -902,8 +901,7 @@
    "outputs": [],
    "source": [
     "def decimal_to_byte(decimal):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    byte = '1'\n",
     "    return byte"
    ]
   },
