--- a/Lab3a/Improved Quadratic Equation Solver.ipynb
+++ b/Lab3a/Improved Quadratic Equation Solver.ipynb
@@ -31,11 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-16T08:37:39.390151Z",
-     "start_time": "2020-09-16T08:37:39.299160Z"
+     "end_time": "2020-09-22T05:38:19.981776Z",
+     "start_time": "2020-09-22T05:38:19.897995Z"
     },
     "slideshow": {
      "slide_type": "skip"
@@ -125,11 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-16T08:37:39.517000Z",
-     "start_time": "2020-09-16T08:37:39.509288Z"
+     "end_time": "2020-09-22T05:38:19.992947Z",
+     "start_time": "2020-09-22T05:38:19.985698Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -151,18 +151,22 @@
     "def get_roots(a, b, c):\n",
     "    d = b**2 - 4 * a * c    # discriminant\n",
     "    if math.isclose(d, 0):\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "        roots = -b / 2 / a\n",
+    "    else:\n",
+    "        d **= 0.5\n",
+    "        root1 = (-b + d)/2/a\n",
+    "        root2 = (-b-d)/2/a\n",
+    "        roots = root1, root2\n",
     "    return roots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-16T08:37:39.532599Z",
-     "start_time": "2020-09-16T08:37:39.521404Z"
+     "end_time": "2020-09-22T05:38:20.004507Z",
+     "start_time": "2020-09-22T05:38:19.996991Z"
     },
     "code_folding": [
      0
@@ -233,7 +237,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Precise issue"
    ]
   },
   {
@@ -287,11 +291,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-16T08:37:39.696974Z",
-     "start_time": "2020-09-16T08:37:39.689302Z"
+     "end_time": "2020-09-22T05:38:20.021922Z",
+     "start_time": "2020-09-22T05:38:20.015551Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -310,17 +314,25 @@
     "def get_roots(a, b, c):\n",
     "    d = b**2 - 4 * a * c\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    if a == 0:\n",
+    "        roots = -c / b\n",
+    "    elif math.isclose(d, 0):\n",
+    "        roots = -b / 2 / a\n",
+    "    else:\n",
+    "        d **= 0.5\n",
+    "        root1 = (-b + d)/2/a\n",
+    "        root2 = (-b-d)/2/a\n",
+    "        roots = root1, root2\n",
     "    return roots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-16T08:37:39.709020Z",
-     "start_time": "2020-09-16T08:37:39.700505Z"
+     "end_time": "2020-09-22T05:38:20.033892Z",
+     "start_time": "2020-09-22T05:38:20.025559Z"
     },
     "code_folding": [
      0
@@ -425,11 +437,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-16T08:37:39.809025Z",
-     "start_time": "2020-09-16T08:37:39.799149Z"
+     "end_time": "2020-09-22T05:38:20.056806Z",
+     "start_time": "2020-09-22T05:38:20.051243Z"
     },
     "deletable": false,
     "nbgrader": {
@@ -450,18 +462,25 @@
    "source": [
     "def get_roots(a, b, c):\n",
     "    d = b**2 - 4 * a * c\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    if a == 0:\n",
+    "        roots = -c / b\n",
+    "    elif math.isclose(d, 0):\n",
+    "        roots = -b / 2 / a\n",
+    "    else:\n",
+    "        d **= 0.5\n",
+    "        root1 = (-b + d)/2/a\n",
+    "        root2 = (-b-d)/2/a\n",
+    "        roots = root1, root2\n",
     "    return roots"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-16T08:37:39.821708Z",
-     "start_time": "2020-09-16T08:37:39.811805Z"
+     "end_time": "2020-09-22T05:38:20.134667Z",
+     "start_time": "2020-09-22T05:38:20.060220Z"
     },
     "code_folding": [
      0
@@ -483,7 +502,21 @@
      "slide_type": "skip"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-ae3aacb27799>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0mtest_get_roots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0mtest_get_roots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0mtest_get_roots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'inf'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'inf'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-7-ae3aacb27799>\u001b[0m in \u001b[0;36mtest_get_roots\u001b[0;34m(roots, a, b, c)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# tests\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtest_get_roots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroots\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mroots_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_roots\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mroots\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mcorrect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mroots_\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-19f6d730d944>\u001b[0m in \u001b[0;36mget_roots\u001b[0;34m(a, b, c)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0md\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m4\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m# YOUR CODE HERE\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mroots\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNotImplementedError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# tests\n",
     "def test_get_roots(roots, a, b, c):\n",
@@ -528,8 +561,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-16T08:37:39.926243Z",
-     "start_time": "2020-09-16T08:37:39.867260Z"
+     "end_time": "2020-09-22T05:38:20.136810Z",
+     "start_time": "2020-09-22T05:38:17.496Z"
     },
     "code_folding": [
      0
