Lecture1-3 with answers

--- a/Lecture1/Introduction to Computer Programming.ipynb
+++ b/Lecture1/Introduction to Computer Programming.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-31T14:49:03.921316Z",
-     "start_time": "2020-08-31T14:49:03.855597Z"
+     "end_time": "2020-09-13T22:27:45.267725Z",
+     "start_time": "2020-09-13T22:27:45.205577Z"
     },
     "hide_input": true,
     "init_cell": true
@@ -215,10 +215,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "305952cab25662510a47aa8613f60f13",
      "grade": true,
      "grade_id": "cell-3ea9d712eccdf31c",
      "locked": false,
@@ -232,7 +229,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "- 3D printer available at [CityU](https://www.cityu.edu.hk/lib/create/3dprint.htm)"
    ]
   },
   {
@@ -253,10 +250,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "c93b64250646392b2bb1b4e253e42602",
      "grade": true,
      "grade_id": "cell-1c411172f0ed411b",
      "locked": false,
@@ -270,7 +264,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "- 3D scanner available at [CityU](https://www.cityu.edu.hk/lib/create/3dscan.htm)"
    ]
   },
   {
@@ -287,10 +281,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "4618d2caaff4f4676c8e0fb31bd852fb",
      "grade": true,
      "grade_id": "cell-e1982fbce01506b3",
      "locked": false,
@@ -304,7 +295,9 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "- hard disk\n",
+    "- CD/DVD Rom (writable)\n",
+    "- touch screen"
    ]
   },
   {
@@ -374,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-23T03:52:31.770264Z",
@@ -384,7 +377,21 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe src=\"https://tools.withcode.uk/cpu\" width=\"800\" height=\"800\">\n",
+       "</iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<iframe src=\"https://tools.withcode.uk/cpu\" width=\"800\" height=\"800\">\n",
@@ -428,11 +435,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "5592acfb2ff88fb592b324d341d9e6eb",
      "grade": false,
      "grade_id": "cell-7675978e85548d96",
      "locked": true,
@@ -451,10 +454,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "ce150ac6fc49d5a9d34887bef80dfc87",
      "grade": true,
      "grade_id": "cell-08298600f10cfc25",
      "locked": false,
@@ -468,7 +468,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "The first six lines of binary sequences in the RAM. The last line `Ends` the program."
    ]
   },
   {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-23T12:08:18.318069Z",
@@ -509,7 +509,20 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/Xpk67YzOn5w\" allowfullscreen></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/Xpk67YzOn5w\" allowfullscreen></iframe>"
@@ -544,10 +557,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "af60b4dcf83fc003af355c3f7205266e",
      "grade": true,
      "grade_id": "cell-1023083cd0aca779",
      "locked": false,
@@ -562,8 +572,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "2 ** 10 # because there are that many binary sequences of length 10."
    ]
   },
   {
@@ -756,17 +765,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-23T12:30:45.988658Z",
      "start_time": "2020-08-23T12:30:45.980714Z"
     },
+    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"900\", height=\"1000\" src=\"https://micropython.org/unicorn/\"></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<iframe width=\"900\", height=\"1000\" src=\"https://micropython.org/unicorn/\"></iframe>"
@@ -785,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-23T12:31:08.305383Z",
@@ -795,7 +818,20 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/QdVFvsCWXrA\" allowfullscreen></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/QdVFvsCWXrA\" allowfullscreen></iframe>"
@@ -903,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-23T10:59:22.898373Z",
@@ -913,7 +949,20 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/Y8Tko2YC5hA?end=200\" allowfullscreen></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/Y8Tko2YC5hA?end=200\" allowfullscreen></iframe>"
@@ -947,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-23T12:39:13.621619Z",
@@ -957,7 +1006,36 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "In which year did you join CityU? 2020\n",
+      "So you are a year 1 student.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"1100\"\n",
+       "            height=\"400\"\n",
+       "            src=\"https://e-quiz.cs.cityu.edu.hk/opt/cs1302visualize.html#mode=display&code=%22%22%22%0AThe%20program%20here%20reads%20the%20cohort%20and%20reports%20which%20year%20the%20user%20is%20in%20%0AAssumption%3A%20Input%20is%20integer%20no%20greater%20than%202020%0A%22%22%22%0Aimport%20datetime%20%20%23%20load%20a%20library%20to%20tell%20the%20current%20year%0Acohort%20%3D%20input%28%22In%20which%20year%20did%20you%20join%20CityU%3F%20%22%29%0Ayear%20%20%20%3D%20datetime.datetime.now%28%29.year%20-%20int%28cohort%29%20%2B%201%0Aprint%28%22So%20you%20are%20a%20year%22%2Cyear%2C%22student.%22%29%0A\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7f131c3ffdd0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%mytutor -h 400\n",
     "# The program here reads the cohort and reports which year the user is in\n",
@@ -1022,11 +1100,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
-    "editable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "f9351ef74f514c9e1b3da99d288f48b0",
      "grade": false,
      "grade_id": "cell-6c906df220a97280",
      "locked": true,
@@ -1045,10 +1119,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "e681f16f8b34d0f98c637a98f67b5273",
      "grade": true,
      "grade_id": "cell-205d445ede20461d",
      "locked": false,
@@ -1062,19 +1133,33 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Perhaps programming using natural languages. Write programs that people enjoy reading, like [literate programming](https://www.youtube.com/watch?v=bTkXg2LZIMQ).  \n",
+    "Indeed, Jupyter notebook is arguably a step towards this direction. See [nbdev](https://github.com/fastai/nbdev)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-08-23T12:02:59.640220Z",
      "start_time": "2020-08-23T12:02:59.630355Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/bTkXg2LZIMQ\" allowfullscreen></iframe>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<iframe width=\"912\" height=\"513\" src=\"https://www.youtube.com/embed/bTkXg2LZIMQ\" allowfullscreen></iframe>"
@@ -1101,6 +1186,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Create Assignment",
   "kernelspec": {
    "display_name": "Python 3.7",
    "language": "python",
