--- a/Lecture2/Expressions and Arithmetic.ipynb
+++ b/Lecture2/Expressions and Arithmetic.ipynb
@@ -95,11 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T11:29:00.455203Z",
-     "start_time": "2020-09-04T11:29:00.409786Z"
+     "end_time": "2020-09-12T01:56:24.675900Z",
+     "start_time": "2020-09-12T01:56:24.573989Z"
     },
     "code_folding": [
      0
@@ -108,7 +108,22 @@
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "180c6747369d4522a8517c7a5599f05a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='10', description='operand1'), Dropdown(description='operator', options={'+':…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# ipywidgets to demonstrate the operations of binary operators\n",
     "from ipywidgets import interact\n",
@@ -136,10 +151,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "bb9d7652c3d48ca53bba8eccf492ef05",
      "grade": true,
      "grade_id": "integer-division",
      "locked": false,
@@ -153,7 +165,8 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "- `/` is the usual division, and so `10/3` returns the floating-point number $3.\\dot{3}$.\n",
+    "- `//` is integer division, and so `10//3` gives the integer quotient 3."
    ]
   },
   {
@@ -192,6 +205,15 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "nbgrader": {
+     "grade": true,
+     "grade_id": "concatenation",
+     "locked": false,
+     "points": 0,
+     "schema_version": 3,
+     "solution": true,
+     "task": false
+    },
     "slideshow": {
      "slide_type": "-"
     }
@@ -216,10 +238,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "c17c6d48f40d50c42237ef5705b4b0af",
      "grade": true,
      "grade_id": "mixed-type",
      "locked": false,
@@ -233,7 +252,8 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "- `/` already returns a `float`.\n",
+    "- For all other operators, changing at least one of the operands to `float` will return a `float`."
    ]
   },
   {
@@ -318,10 +338,9 @@
     "|    Operators     | Associativity |\n",
     "| :--------------- | :-----------: |\n",
     "| `**`             |     right     |\n",
-    "| `-` (unary)      |               |\n",
+    "| `-` (unary)      |     right     |\n",
     "| `*`,`/`,`//`,`%` |     left      |\n",
-    "| `+`,`-`          |     left      |\n",
-    "| `=`              |     right     |"
+    "| `+`,`-`          |     left      |"
    ]
   },
   {
@@ -333,22 +352,38 @@
    },
    "source": [
     "**Exercise** Play with the following widget to understand the precedence and associativity of different operators.  \n",
-    "In particular, explain whether the expression `-10 ** 2*3` give $(-10)^{2\\times 3}= 10^6 = 1000000$."
+    "In particular, explain whether the expression `-10 ** 2*3` gives $(-10)^{2\\times 3}= 10^6 = 1000000$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T12:25:08.180027Z",
-     "start_time": "2020-09-04T12:25:08.133410Z"
+     "end_time": "2020-09-12T02:41:21.545421Z",
+     "start_time": "2020-09-12T02:41:21.484702Z"
     },
+    "scrolled": false,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2aecf8675c5948ec841c98a3015764f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='operator1', options={'None': '', 'unary -': '-'}, value=''), Dropd…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import fixed\n",
     "@interact(operator1={'None':'','unary -':'-'},\n",
@@ -367,10 +402,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "0c0b37e572d736ec00ff80462a498e5c",
      "grade": true,
      "grade_id": "precedence",
      "locked": false,
@@ -384,7 +416,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "The expression evaluates to $(-(10^2))\\times 3=-300$ instead because the exponentiation operator `**` has higher precedence than both the multiplication `*` and the negation operators `-`."
    ]
   },
   {
@@ -401,16 +433,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T13:52:39.685135Z",
-     "start_time": "2020-09-04T13:52:39.678922Z"
+     "end_time": "2020-09-12T02:42:06.838771Z",
+     "start_time": "2020-09-12T02:42:06.821964Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "3fad0d373e4d4bd412aac80ff6e16a28",
      "grade": true,
      "grade_id": "pep8",
      "locked": false,
@@ -423,10 +452,21 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-300"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print(-10**2 * 3)  # can use use code-prettify extension to fix incorrect styles\n",
+    "print((-10)**2 * 3)"
    ]
   },
   {
@@ -465,17 +505,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T09:25:24.379636Z",
-     "start_time": "2020-09-04T09:25:24.340181Z"
+     "end_time": "2020-09-12T02:50:22.431213Z",
+     "start_time": "2020-09-12T02:50:22.389022Z"
     },
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "955b883f5438459f9d262a959f9a53c3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='operator', options=('+=', '-=', '*=', '/=', '//=', '%=', '**='), v…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import interact, fixed\n",
     "@interact(initial_value=fixed(r'10'),\n",
@@ -501,17 +556,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-04T12:31:45.339984Z",
      "start_time": "2020-09-04T12:31:45.335881Z"
     },
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-62-566073d2d63b>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-62-566073d2d63b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    3*(x = 15)\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "3*(x = 15)"
    ]
@@ -519,10 +584,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "454a97bd9237b5f40285026dc7f4efcc",
      "grade": true,
      "grade_id": "assignment-statement",
      "locked": false,
@@ -536,11 +598,12 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "Assignment operators are used in assignment statements, which are not expressions because they cannot be evaluated."
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Create Assignment",
   "kernelspec": {
    "display_name": "Python 3.7",
    "language": "python",
