--- a/Lecture4/Using Functions.ipynb
+++ b/Lecture4/Using Functions.ipynb
@@ -19,8 +19,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T08:32:14.771226Z",
-     "start_time": "2020-09-26T08:32:14.731708Z"
+     "end_time": "2020-09-26T10:35:20.622475Z",
+     "start_time": "2020-09-26T10:35:20.557782Z"
     },
     "hide_input": true,
     "init_cell": true,
@@ -148,8 +148,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-18T23:59:31.846239Z",
-     "start_time": "2020-09-18T23:59:31.839386Z"
+     "end_time": "2020-09-26T10:36:42.539302Z",
+     "start_time": "2020-09-26T10:36:42.531086Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -179,8 +179,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-19T00:04:45.017123Z",
-     "start_time": "2020-09-19T00:04:45.011260Z"
+     "end_time": "2020-09-26T10:37:30.410063Z",
+     "start_time": "2020-09-26T10:37:30.402747Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -209,8 +209,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-19T00:07:40.790230Z",
-     "start_time": "2020-09-19T00:07:38.641929Z"
+     "end_time": "2020-09-26T10:37:52.209981Z",
+     "start_time": "2020-09-26T10:37:49.292575Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -237,8 +237,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-19T00:08:48.264330Z",
-     "start_time": "2020-09-19T00:08:48.257122Z"
+     "end_time": "2020-09-26T10:38:06.459546Z",
+     "start_time": "2020-09-26T10:38:06.454332Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -266,8 +266,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-19T00:12:08.268109Z",
-     "start_time": "2020-09-19T00:12:06.860002Z"
+     "end_time": "2020-09-26T10:38:55.805698Z",
+     "start_time": "2020-09-26T10:38:50.415718Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -275,7 +275,7 @@
    },
    "outputs": [],
    "source": [
-    "print('1st input:',input(),'2nd input',input())"
+    "print('1st input:', input(), '2nd input', input())"
    ]
   },
   {
@@ -401,8 +401,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-24T04:34:09.717584Z",
-     "start_time": "2020-09-24T04:34:09.709777Z"
+     "end_time": "2020-09-26T10:41:22.594751Z",
+     "start_time": "2020-09-26T10:41:22.588506Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -424,7 +424,7 @@
     }
    },
    "source": [
-    "The above import both the functions `log10` and `ceil` from `math` to compute the number $\\lfloor \\log_{10}(x)\\rfloor$ of digits of a *strictly positive* integer $x$."
+    "The above import both the functions `log10` and `ceil` from `math` to compute the number $\\lceil \\log_{10}(x)\\rceil$ of digits of a *strictly positive* integer $x$."
    ]
   },
   {
@@ -443,8 +443,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-24T04:35:43.664026Z",
-     "start_time": "2020-09-24T04:35:43.655989Z"
+     "end_time": "2020-09-26T10:42:54.301642Z",
+     "start_time": "2020-09-26T10:42:54.293055Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -454,9 +454,7 @@
    "source": [
     "%%mytutor -h 300\n",
     "from math import *  # import all except names starting with an underscore\n",
-    "print('{:.2f}, {:.2f}, {:.2f}'.format(sin(pi/6),\n",
-    "                                      cos(pi/3),\n",
-    "                                      tan(pi/4)))"
+    "print('{:.2f}, {:.2f}, {:.2f}'.format(sin(pi / 6), cos(pi / 3), tan(pi / 4)))"
    ]
   },
   {
@@ -486,8 +484,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-14T11:10:33.866907Z",
-     "start_time": "2020-09-14T11:10:33.859808Z"
+     "end_time": "2020-09-26T10:44:06.443022Z",
+     "start_time": "2020-09-26T10:44:06.434362Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -496,11 +494,11 @@
    "outputs": [],
    "source": [
     "%%mytutor -h 300\n",
-    "print('{}'.format(pow(-1,2)))\n",
-    "print('{:.2f}'.format(pow(-1,1/2)))\n",
+    "print('{}'.format(pow(-1, 2)))\n",
+    "print('{:.2f}'.format(pow(-1, 1 / 2)))\n",
     "from math import *\n",
-    "print('{}'.format(pow(-1,2)))\n",
-    "print('{:.2f}'.format(pow(-1,1/2)))"
+    "print('{}'.format(pow(-1, 2)))\n",
+    "print('{:.2f}'.format(pow(-1, 1 / 2)))"
    ]
   },
   {
@@ -532,8 +530,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-14T11:12:49.356094Z",
-     "start_time": "2020-09-14T11:12:49.347490Z"
+     "end_time": "2020-09-26T10:45:35.988045Z",
+     "start_time": "2020-09-26T10:45:35.981943Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -543,8 +541,7 @@
    "source": [
     "%%mytutor -h 250\n",
     "import math\n",
-    "print('{:.2f}, {:.2f}'.format(math.pow(-1,2),\n",
-    "                              pow(-1,1/2)))"
+    "print('{:.2f}, {:.2f}'.format(math.pow(-1, 2), pow(-1, 1 / 2)))"
    ]
   },
   {
@@ -597,7 +594,7 @@
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot\n",
-    "matplotlib.pyplot.stem([4,3,2,1])\n",
+    "matplotlib.pyplot.stem([4, 3, 2, 1])\n",
     "matplotlib.pyplot.ylabel(r'$x_n$')\n",
     "matplotlib.pyplot.xlabel(r'$n$')\n",
     "matplotlib.pyplot.title('A sequence of numbers')\n",
@@ -631,7 +628,7 @@
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.stem([4,3,2,1])\n",
+    "plt.stem([4, 3, 2, 1])\n",
     "plt.ylabel(r'$x_n$')\n",
     "plt.xlabel(r'$n$')\n",
     "plt.title('A sequence of numbers')\n",
@@ -664,7 +661,7 @@
    "outputs": [],
    "source": [
     "from math import pow as fpow\n",
-    "fpow(2,2),pow(2,2)"
+    "fpow(2, 2), pow(2, 2)"
    ]
   },
   {
@@ -683,8 +680,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-14T12:28:52.819398Z",
-     "start_time": "2020-09-14T12:28:52.804722Z"
+     "end_time": "2020-09-26T10:49:46.071860Z",
+     "start_time": "2020-09-26T10:49:46.001859Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -693,7 +690,7 @@
    "outputs": [],
    "source": [
     "import math as m\n",
-    "for m in range(5): m.pow(m,2)"
+    "for m in range(5): m.pow(m, 2)"
    ]
   },
   {
@@ -737,10 +734,11 @@
     "deletable": false,
     "nbgrader": {
      "cell_type": "code",
-     "checksum": "839dbf6b4cf5dd7fd0275e03dcda0384",
-     "grade": false,
-     "grade_id": "cell-209697dd89caadff",
+     "checksum": "394f3f20ec67f7e053ad6866f04507c2",
+     "grade": true,
+     "grade_id": "random",
      "locked": false,
+     "points": 0,
      "schema_version": 3,
      "solution": true,
      "task": false
@@ -790,8 +788,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-17T02:38:35.864204Z",
-     "start_time": "2020-09-17T02:38:35.857840Z"
+     "end_time": "2020-09-26T10:51:54.624111Z",
+     "start_time": "2020-09-26T10:51:54.619242Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -799,6 +797,7 @@
    },
    "outputs": [],
    "source": [
+    "import random\n",
     "help(random.randint)  # random must be imported before"
    ]
   },
@@ -807,8 +806,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-17T02:38:37.243549Z",
-     "start_time": "2020-09-17T02:38:37.225174Z"
+     "end_time": "2020-09-26T10:52:06.890625Z",
+     "start_time": "2020-09-26T10:52:06.875177Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -824,8 +823,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-17T02:40:30.076846Z",
-     "start_time": "2020-09-17T02:40:30.069717Z"
+     "end_time": "2020-09-26T10:52:13.621351Z",
+     "start_time": "2020-09-26T10:52:13.615592Z"
     }
    },
    "outputs": [],
@@ -860,8 +859,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-17T02:31:16.631363Z",
-     "start_time": "2020-09-17T02:31:16.625266Z"
+     "end_time": "2020-09-26T10:53:18.862516Z",
+     "start_time": "2020-09-26T10:53:18.856275Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -910,8 +909,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-17T02:42:51.699377Z",
-     "start_time": "2020-09-17T02:42:51.687363Z"
+     "end_time": "2020-09-26T10:53:42.536516Z",
+     "start_time": "2020-09-26T10:53:42.526115Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -939,8 +938,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-14T01:50:42.359956Z",
-     "start_time": "2020-09-14T01:50:42.348755Z"
+     "end_time": "2020-09-26T10:53:58.070284Z",
+     "start_time": "2020-09-26T10:53:58.063210Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -968,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
