--- a/Lecture4/Writing Functions.ipynb
+++ b/Lecture4/Writing Functions.ipynb
@@ -19,8 +19,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T04:20:46.277485Z",
-     "start_time": "2020-09-26T04:20:46.211832Z"
+     "end_time": "2020-09-26T11:02:49.139629Z",
+     "start_time": "2020-09-26T11:02:49.033100Z"
     },
     "hide_input": true,
     "slideshow": {
@@ -88,8 +88,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T04:20:49.597593Z",
-     "start_time": "2020-09-26T04:20:49.593783Z"
+     "end_time": "2020-09-26T10:57:20.079405Z",
+     "start_time": "2020-09-26T10:57:20.074270Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -107,8 +107,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T04:20:50.605138Z",
-     "start_time": "2020-09-26T04:20:50.600909Z"
+     "end_time": "2020-09-26T10:57:23.433464Z",
+     "start_time": "2020-09-26T10:57:23.428654Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -139,8 +139,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T04:20:55.707014Z",
-     "start_time": "2020-09-26T04:20:55.692120Z"
+     "end_time": "2020-09-26T10:57:44.785181Z",
+     "start_time": "2020-09-26T10:57:44.764752Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -150,6 +150,7 @@
    "source": [
     "def increment(x):\n",
     "    return x + 1\n",
+    "\n",
     "\n",
     "increment(3)"
    ]
@@ -170,8 +171,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T04:20:59.865660Z",
-     "start_time": "2020-09-26T04:20:59.860126Z"
+     "end_time": "2020-09-26T10:57:54.035276Z",
+     "start_time": "2020-09-26T10:57:54.029723Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -191,8 +192,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T04:21:01.390186Z",
-     "start_time": "2020-09-26T04:21:01.384728Z"
+     "end_time": "2020-09-26T10:58:12.060065Z",
+     "start_time": "2020-09-26T10:58:12.053516Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -200,7 +201,7 @@
    },
    "outputs": [],
    "source": [
-    "length_of_hypotenuse(3,4)"
+    "length_of_hypotenuse(3, 4)"
    ]
   },
   {
@@ -208,8 +209,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T04:21:02.952131Z",
-     "start_time": "2020-09-26T04:21:02.947429Z"
+     "end_time": "2020-09-26T10:58:15.167643Z",
+     "start_time": "2020-09-26T10:58:15.162160Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -217,7 +218,7 @@
    },
    "outputs": [],
    "source": [
-    "length_of_hypotenuse(-3,4)"
+    "length_of_hypotenuse(-3, 4)"
    ]
   },
   {
@@ -247,8 +248,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T04:21:06.093065Z",
-     "start_time": "2020-09-26T04:21:06.088254Z"
+     "end_time": "2020-09-26T10:58:32.291732Z",
+     "start_time": "2020-09-26T10:58:32.286171Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -265,7 +266,7 @@
     "    - parameter passing, \n",
     "    - return statement, and \n",
     "    - function documentation.'''\n",
-    "    return x + 1  # + operation is used and may fail for 'str' "
+    "    return x + 1  # + operation is used and may fail for 'str'"
    ]
   },
   {
@@ -286,8 +287,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T04:21:08.715139Z",
-     "start_time": "2020-09-26T04:21:08.709937Z"
+     "end_time": "2020-09-26T10:58:37.897312Z",
+     "start_time": "2020-09-26T10:58:37.890013Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -410,6 +411,7 @@
     "    - function documentation.'''\n",
     "    return x + 1  # + operation is used and may fail for 'str'\n",
     "\n",
+    "\n",
     "help(increment)"
    ]
   },
@@ -422,7 +424,7 @@
    },
    "source": [
     "The above annotations is not enforced by the Python interpreter.  \n",
-    "Nevertheless, such annotations make the code easier to understand and can be used by editor with type checking tools."
+    "Nevertheless, such annotations make the code easier to understand and can be used by editor with type-checking tools."
    ]
   },
   {
@@ -430,8 +432,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-26T04:21:25.860654Z",
-     "start_time": "2020-09-26T04:21:25.856361Z"
+     "end_time": "2020-09-26T11:01:10.903133Z",
+     "start_time": "2020-09-26T11:01:10.899325Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -448,7 +450,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-09-26T04:21:26.482Z"
+     "end_time": "2020-09-26T11:01:33.691263Z",
+     "start_time": "2020-09-26T11:01:29.588117Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -486,7 +489,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-09-26T04:21:29.373Z"
+     "end_time": "2020-09-26T11:02:06.564099Z",
+     "start_time": "2020-09-26T11:02:06.559581Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -503,7 +507,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-09-26T04:21:29.805Z"
+     "end_time": "2020-09-26T11:02:10.712572Z",
+     "start_time": "2020-09-26T11:02:10.708004Z"
     },
     "slideshow": {
      "slide_type": "fragment"
@@ -532,7 +537,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2020-09-26T04:21:30.195Z"
+     "end_time": "2020-09-26T11:03:15.848468Z",
+     "start_time": "2020-09-26T11:03:15.843151Z"
     },
     "slideshow": {
      "slide_type": "subslide"
@@ -543,6 +549,7 @@
     "%%mytutor -h 350\n",
     "def increment(x):\n",
     "    x += 1\n",
+    "\n",
     "\n",
     "x = 3\n",
     "increment(x)\n",
@@ -564,13 +571,6 @@
     "- Step 5-6: The local (but not the global) variable `x` is incremented.\n",
     "- Step 6-7: The function call completes and the local frame is removed."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -589,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
