--- a/Lecture2/Values and Variables.ipynb
+++ b/Lecture2/Values and Variables.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T16:59:14.557222Z",
-     "start_time": "2020-09-04T16:59:14.477648Z"
+     "end_time": "2020-09-12T22:59:39.139630Z",
+     "start_time": "2020-09-12T22:59:39.089401Z"
     },
     "hide_input": true,
     "init_cell": true
@@ -66,6 +66,7 @@
      "end_time": "2020-09-04T06:12:24.113291Z",
      "start_time": "2020-09-04T06:12:24.100412Z"
     },
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -106,7 +107,7 @@
    },
    "outputs": [],
    "source": [
-    "0xF  # hexadecimal (base 16) with possible digits 1,2,3,4,5,6,7,8,9,A,B,C,D,E,F"
+    "0xF  # hexadecimal (base 16) with possible digits 0, 1,2,3,4,5,6,7,8,9,A,B,C,D,E,F"
    ]
   },
   {
@@ -187,10 +188,7 @@
      "end_time": "2020-09-04T06:12:41.955927Z",
      "start_time": "2020-09-04T06:12:41.744204Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "d6ce032e84f49cd962816c07606a6ff4",
      "grade": true,
      "grade_id": "big-int",
      "locked": false,
@@ -199,14 +197,16 @@
      "solution": true,
      "task": false
     },
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# There is no maximum for an integer for Python3. \n",
+    "# See https://docs.python.org/3.1/whatsnew/3.0.html#integers\n",
+    "11 ** 100000"
    ]
   },
   {
@@ -468,10 +468,7 @@
      "end_time": "2020-09-04T06:13:28.083690Z",
      "start_time": "2020-09-04T06:13:28.076808Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "8768be1d510ea6cc2305f282e0d8c402",
      "grade": true,
      "grade_id": "multi-line",
      "locked": false,
@@ -486,8 +483,14 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print('''\n",
+    " (ง •̀_•́)ง \n",
+    " ╰(●’◡’●)╮ \n",
+    " (..•˘_˘•..)\n",
+    " (づ￣ 3￣)づ\n",
+    "''')\n",
+    "# See also https://github.com/glamp/bashplotlib\n",
+    "# Star Wars via Telnet http://asciimation.co.nz/"
    ]
   },
   {
@@ -574,10 +577,7 @@
      "end_time": "2020-09-04T06:13:44.080017Z",
      "start_time": "2020-09-04T06:13:44.071401Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "7ef0a697a5165082230e7acf59ebed18",
      "grade": true,
      "grade_id": "assign-vs-eq",
      "locked": false,
@@ -592,8 +592,8 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "x = x + 1\n",
+    "x"
    ]
   },
   {
@@ -617,6 +617,7 @@
      "end_time": "2020-09-04T06:13:46.281847Z",
      "start_time": "2020-09-04T06:13:46.271712Z"
     },
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -785,12 +786,12 @@
     }
    },
    "source": [
-    "**Exercise** Evaluate the following cell and if any of the rules above is violated."
+    "**Exercise** Evaluate the following cell and check if any of the rules above is violated."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-04T07:45:48.191750Z",
@@ -801,7 +802,22 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2a0107430e82405c8738710065294d8f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='assignment', options=('a-number = 15', 'a_number = 15', '15 = 15',…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import interact\n",
     "@interact\n",
@@ -821,10 +837,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "5ecc235f0ae5be5c77beeed2f6b6dd2e",
      "grade": true,
      "grade_id": "invalid-identifiers",
      "locked": false,
@@ -838,7 +851,9 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "1. `a-number = 15` violates Rule 1 because `-` is not allowed. `-` is interpreted as an operator.\n",
+    "1. `15 = 15` violates Rule 1 because `15` starts with a digit instead of letter or _.\n",
+    "1. `del = 15` violates Rule 2 because `del` is a keyword."
    ]
   },
   {
@@ -907,7 +922,7 @@
     }
    },
    "source": [
-    "**How to let the user input value at *runtime*,  \n",
+    "**How to let the user input a value at *runtime*,  \n",
     "i.e., as the program executes?**"
    ]
   },
@@ -965,7 +980,7 @@
     }
    },
    "source": [
-    "**Exercise** Explain whether the following code prints `'My name is Python'`. Does `print` returns a value? "
+    "**Exercise** Explain whether the following code prints `'My name is Python'`. Does `print` return a value? "
    ]
   },
   {
@@ -988,10 +1003,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "b46e46183a992620cdad06cf2e6ac08d",
      "grade": true,
      "grade_id": "print-returns-none",
      "locked": false,
@@ -1005,7 +1017,8 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "- Unlike `input`, the function `print` does not return the string it is trying to print. Printing a string is, therefore, different from returning a string.\n",
+    "- `print` actually returns a `None` object that gets printed as `None`."
    ]
   },
   {
@@ -1063,10 +1076,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "5242ad43e12cfbc589a2f021142b56f4",
      "grade": true,
      "grade_id": "cell-d1d22bc89eb9f7b6",
      "locked": false,
@@ -1080,7 +1090,7 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "The two numbers are concatenated instead of added together."
    ]
   },
   {
@@ -1145,10 +1155,7 @@
      "end_time": "2020-09-04T06:17:39.062596Z",
      "start_time": "2020-09-04T06:17:39.051304Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "943fc9cf3dea00f3a08ae5e092f43f07",
      "grade": true,
      "grade_id": "type",
      "locked": false,
@@ -1163,8 +1170,7 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "type(15), type(print), type(print()), type(input), type(type), type(type(type))"
    ]
   },
   {
@@ -1281,10 +1287,7 @@
      "end_time": "2020-09-04T06:19:05.685119Z",
      "start_time": "2020-09-04T06:18:54.936526Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "4f2b7bf4fb934329e7ea11675393eebf",
      "grade": false,
      "grade_id": "string-concat-bug",
      "locked": false,
@@ -1301,8 +1304,9 @@
     "num1 = input('Please input an integer: ')\n",
     "num2 = input('Please input another integer: ')\n",
     "# print(num1, '+', num2, 'is equal to', num1 + num2)  # fix this line below\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "### BEGIN SOLUTION\n",
+    "print(num1, '+', num2, 'is equal to', int(num1) + int(num2))\n",
+    "### END SOLUTION"
    ]
   },
   {
@@ -1388,6 +1392,7 @@
      "end_time": "2020-09-04T06:19:20.450012Z",
      "start_time": "2020-09-04T06:19:20.443547Z"
     },
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -1600,10 +1605,7 @@
      "end_time": "2020-09-03T00:03:42.085828Z",
      "start_time": "2020-09-03T00:03:42.073895Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "397bf914b96707ad1a38ff53085f1c22",
      "grade": true,
      "grade_id": "invalid-input",
      "locked": false,
@@ -1617,7 +1619,13 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "The possible invalid inputs are:\n",
+    "> `4 + 5 + 6`, `15.0`, `fifteen`\n",
+    "\n",
+    "It raises a value error, which is a runtime error detected during execution.  \n",
+    "\n",
+    "Note that the followings are okay\n",
+    "> int('-1'), eval('4 + 5 + 6')"
    ]
   },
   {
@@ -1693,7 +1701,8 @@
    },
    "source": [
     "- `float` corresponds to the [*floating point* representation](https://en.wikipedia.org/wiki/Floating-point_arithmetic#Floating-point_numbers).  \n",
-    "- A number in stored exactly the way we write it in scientific notation, which consists of the sign, mantissa, and exponent: $$\\overbrace{-}^{\\text{sign}} \\underbrace{1.0}_{\\text{mantissa}\\kern-1em}e\\overbrace{-1}^{\\text{exponent}\\kern-1em}=1\\times 10^{-1}$$"
+    "- A `float` in stored exactly the way we write it in scientific notation: $$\\overbrace{-}^{\\text{sign}} \\underbrace{1.0}_{\\text{mantissa}\\kern-1em}e\\overbrace{-1}^{\\text{exponent}\\kern-1em}=-1\\times 10^{-1}$$\n",
+    "- The [truth](https://www.h-schmidt.net/FloatConverter/IEEE754.html) is more complicated than required for the course."
    ]
   },
   {
@@ -1833,20 +1842,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-04T06:25:02.965655Z",
-     "start_time": "2020-09-04T06:25:02.955525Z"
+     "end_time": "2020-09-08T00:06:41.090541Z",
+     "start_time": "2020-09-08T00:06:41.074137Z"
     },
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, False, True)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(1.0 == 1.0 + sys.float_info.epsilon * 0.5, # returns true if equal\n",
-    " 1.0 == 1.0 + sys.float_info.epsilon * 0.6)"
+    " 1.0 == 1.0 + sys.float_info.epsilon * 0.6, sys.float_info.max + 1 == sys.float_info.max)"
    ]
   },
   {
@@ -1896,6 +1916,7 @@
      "end_time": "2020-09-04T06:25:11.466342Z",
      "start_time": "2020-09-04T06:25:11.458247Z"
     },
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1975,8 +1996,7 @@
     }
    },
    "source": [
-    "- Python 3 implements the default rounding method in [IEEE 754](https://en.wikipedia.org/w/index.php?title=IEEE_754#Rounding_rules).\n",
-    "- The [truth](https://www.h-schmidt.net/FloatConverter/IEEE754.html) is more complicated than required for the course."
+    "- Python 3 implements the default rounding method in [IEEE 754](https://en.wikipedia.org/w/index.php?title=IEEE_754#Rounding_rules)."
    ]
   },
   {
@@ -1998,7 +2018,7 @@
     }
    },
    "source": [
-    "**Can we round a float or int for printing but not calculation?**"
+    "**Can we round a `float` or `int` for printing but not calculation?**"
    ]
   },
   {
@@ -2058,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-04T09:30:51.495136Z",
@@ -2067,15 +2087,31 @@
     "code_folding": [
      7
     ],
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a98117c6fbb3494aa2f62a03ca2a6253",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value='10000/3', description='x'), Dropdown(description='sign', options={'None': ''…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import interact\n",
-    "@interact(x=r'10000/3',\n",
-    "          align={'None':'','<':'<','<':'>','=':'=','^':'^'},\n",
+    "@interact(x='10000/3',\n",
+    "          align={'None':'','<':'<','>':'>','=':'=','^':'^'},\n",
     "          sign={'None':'','+':'+','-':'-','SPACE':' '},\n",
     "          width=(0,20),\n",
     "          grouping={'None':'','_':'_',',':','},\n",
@@ -2088,16 +2124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-04T09:31:41.706086Z",
      "start_time": "2020-09-04T09:31:41.699822Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "code",
-     "checksum": "2d3a6cd240b70a30996852f2a8bcd7d2",
      "grade": true,
      "grade_id": "format-spec",
      "locked": false,
@@ -2107,10 +2140,17 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3,333.33\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "print('{:,.2f}'.format(10000/3))"
    ]
   },
   {
@@ -2227,7 +2267,7 @@
    },
    "source": [
     "- We can have multiple *place-holders* `{}` inside a string.\n",
-    "- We can then provide the contents (any type: numbers, strings..) using the `format` function which\n",
+    "- We can then provide the contents (any type: numbers, strings..) using the `format` function, which\n",
     "- substitutes the place-holders by the function arguments from left to right."
    ]
   },
@@ -2246,17 +2286,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-04T06:59:48.333999Z",
      "start_time": "2020-09-04T06:59:48.328303Z"
     },
+    "scrolled": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You should do only what I say instead of what I do.\n",
+      "The surname of John Doe is Doe.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"You should {0} {1} what I say instead of what I {0}.\".format(\"do\", \"only\"))\n",
     "print(\"The surname of {first} {last} is {last}.\".format(first=\"John\", last=\"Doe\"))"
@@ -2306,23 +2356,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-04T09:18:34.925753Z",
      "start_time": "2020-09-04T09:18:34.858335Z"
     },
     "code_folding": [],
+    "scrolled": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ceae1c9402dd4b27b0a5341872e320b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Text(value=\"'ABC'\", description='expression'), Text(value='*', description='fill'), Drop…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import interact\n",
     "@interact(expression=r\"'ABC'\",\n",
     "          fill='*',\n",
-    "          align={'None':'','<':'<','<':'>','=':'=','^':'^'},\n",
+    "          align={'None':'','<':'<','>':'>','=':'=','^':'^'},\n",
     "          width=(0,20))\n",
     "def print_objectt(expression,fill,align='^',width=10):\n",
     "    format_spec = f\"{{:{fill}{align}{'' if width==0 else width}}}\"\n",
@@ -2337,10 +2403,7 @@
      "end_time": "2020-09-04T09:16:52.179558Z",
      "start_time": "2020-09-04T09:16:52.172995Z"
     },
-    "deletable": false,
     "nbgrader": {
-     "cell_type": "markdown",
-     "checksum": "7df87438b481c0581d0b7e425335d263",
      "grade": true,
      "grade_id": "string-formatting",
      "locked": false,
@@ -2351,7 +2414,8 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "1. It returns a ValueError because align must be specified when fill is.\n",
+    "1. The newline character is simply regarded a character. The formatting is not applied line-by-line. E.g., try 'ABC\\nDEF'."
    ]
   }
  ],
